# swift-vec

./: Cargo.toml  LICENSE-APACHE  README.md
src/: lib.rs
src/mat/: mat3.rs  mod.rs
src/rect/: mod.rs  r2d.rs
src/scalar/: mod.rs
src/vector/: mod.rs  v2d.rs  v3d.rs
tests/: dim2.rs  dim3.rs  global.rs  integration_test.rs  scalar.rs
