[package]
name    = "swift_vec"
version = "0.3.0"
edition = "2021"
exclude = [
    ".github/*",
    ".vscode/*",
    "tests/*",
]

keywords    = ["gamedev", "simulation", "math", "utility"]
repository  = "https://github.com/LunaticWyrm467/SwiftVec"
description = "A convenient and comfortable vector maths crate that supports 2D, 3D, and 4D vectors - along with additional scalar math."
license     = "MIT OR Apache-2.0"

[dependencies]
num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }

[features]
default = ["alloc"]
alloc = []
